--- a/json-server/geoease.json
+++ b/json-server/geoease.json
@@ -6,7 +6,9 @@
       "deskripsi": "Rumah Sakit",
       "tanggal": "14/12/2024",
       "waktu": "17.45",
-      "lokasi": "-6.881519380758965, 109.66753863129854"
+      "lokasi": "-6.881519380758965, 109.66753863129854",
+      "latitude": -6.881519380758965,
+      "longitude": 109.66753863129854
     },
     {
       "id": "2",
@@ -14,7 +16,9 @@
       "deskripsi": "Rumah Sakit",
       "tanggal": "13/12/2024",
       "waktu": "09.15",
-      "lokasi": "-6.89147676316304, 109.66151149051143"
+      "lokasi": "-6.89147676316304, 109.66151149051143",
+      "latitude": -6.89147676316304,
+      "longitude": 109.66151149051143
     },
     {
       "id": "3",
@@ -22,7 +26,9 @@
       "deskripsi": "Rumah Sakit",
       "tanggal": "12/12/2024",
       "waktu": "07.30",
-      "lokasi": "-6.880584132951866, 109.67167048563518"
+      "lokasi": "-6.880584132951866, 109.67167048563518",
+      "latitude": -6.880584132951866,
+      "longitude": 109.67167048563518
     },
     {
       "id": "4",
@@ -30,7 +36,9 @@
       "deskripsi": "Rumah Sakit",
       "tanggal": "11/12/2024",
       "waktu": "12.55",
-      "lokasi": "-6.886263851431459, 109.6768182067988"
+      "lokasi": "-6.886263851431459, 109.6768182067988",
+      "latitude": -6.886263851431459,
+      "longitude": 109.6768182067988
     },
     {
       "id": "5",
@@ -38,7 +46,9 @@
       "deskripsi": "Rumah Sakit",
       "tanggal": "10/12/2024",
       "waktu": "14.40",
-      "lokasi": "-6.954489850098288, 109.65016967793953"
+      "lokasi": "-6.954489850098288, 109.65016967793953",
+      "latitude": -6.954489850098288,
+      "longitude": 109.65016967793953
     },
     {
       "id": "6",
@@ -46,7 +56,9 @@
       "deskripsi": "Kantor Polisi",
       "tanggal": "09/12/2024",
       "waktu": "11.45",
-      "lokasi": "-6.866627339478452, 109.67884270199015"
+      "lokasi": "-6.866627339478452, 109.67884270199015",
+      "latitude": -6.866627339478452,
+      "longitude": 109.67884270199015
     },
     {
       "id": "7",
@@ -54,7 +66,9 @@
       "deskripsi": "Kantor Polisi",
       "tanggal": "08/12/2024",
       "waktu": "15.17",
-      "lokasi": "-6.928712399999976, 109.67959213376558"
+      "lokasi": "-6.928712399999976, 109.67959213376558",
+      "latitude": -6.928712399999976,
+      "longitude": 109.67959213376558
     },
     {
       "id": "8",
@@ -62,23 +76,39 @@
       "deskripsi": "Kantor Polisi",
       "tanggal": "07/12/2024",
       "waktu": "18.25",
-      "lokasi": "-6.885720048530559, 109.6755725068065"
+      "lokasi": "-6.885720048530559, 109.6755725068065",
+      "latitude": -6.885720048530559,
+      "longitude": 109.6755725068065
     },
     {
       "id": "9",
       "nama": "Polsek Pekalongan Barat",
-      "deskripsi": "Kantor Polisi",
+      "deskripsi": "Kantor polisi",
       "tanggal": "06/12/2024",
       "waktu": "10.30",
-      "lokasi": "-6.890498854027659, 109.6600250626091"
+      "lokasi": "-6.890498854027659, 109.6600250626091",
+      "latitude": -7.7929824,
+      "longitude": 110.3780897
     },
     {
-      "id": "1734126066524",
-      "nama": "tessss",
-      "deskripsi": "pppp",
-      "tanggal": "1/1/1970",
-      "waktu": "5:00:00 AM",
-      "lokasi": "Latitude: 37.4220936, Longitude: -122.083922"
+      "id": "1734229755577",
+      "nama": "tess",
+      "deskripsi": "halo",
+      "tanggal": "15/12/2024",
+      "waktu": "9:28",
+      "lokasi": "-6.890498854027659, 109.6600250626091",
+      "latitude": -6.890498854027659,
+      "longitude": 109.6600250626091
+    },
+    {
+      "id": "1734271424522",
+      "nama": "haii",
+      "deskripsi": "nnnb",
+      "tanggal": "15/12/2024",
+      "waktu": "21:3",
+      "lokasi": "-7.7930012, 110.3781105",
+      "longitude": 110.3781105,
+      "latitude": -7.7930012
     }
   ]
 }
