--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@maplibre/maplibre-react-native": "^10.0.0-alpha.28",
     "@react-native-community/datetimepicker": "github:react-native-datetimepicker/datetimepicker",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "expo": "^52.0.18",
+    "expo-location": "^18.0.4",
     "firebase": "^11.1.0",
     "json-server": "^1.0.0-beta.3",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
+    "leaflet": "^1.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.76.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "^1.20.1",
+    "react-native-permissions": "^5.2.1",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-svg": "^15.10.1",
