--- a/json-server/geoease.json
+++ b/json-server/geoease.json
@@ -102,13 +102,13 @@
     },
     {
       "id": "1734271424522",
-      "nama": "haii",
-      "deskripsi": "nnnb",
+      "nama": "Thalita",
+      "deskripsi": "Indra",
       "tanggal": "15/12/2024",
-      "waktu": "21:3",
-      "lokasi": "-7.7930012, 110.3781105",
-      "longitude": 110.3781105,
-      "latitude": -7.7930012
+      "waktu": "07:00:00",
+      "lokasi": "-7.7930029, 110.3780859",
+      "longitude": 110.3780859,
+      "latitude": -7.7930029
     }
   ]
 }
