--- a/json-server/geoease.json
+++ b/json-server/geoease.json
@@ -101,14 +101,14 @@
       "longitude": 109.6600250626091
     },
     {
-      "id": "1734271424522",
-      "nama": "Thalita",
-      "deskripsi": "Indra",
-      "tanggal": "15/12/2024",
-      "waktu": "07:00:00",
-      "lokasi": "-7.7930029, 110.3780859",
-      "longitude": 110.3780859,
-      "latitude": -7.7930029
+      "id": "13",
+      "nama": "Polsek Kedungwuni",
+      "deskripsi": "Kantor Polisi",
+      "tanggal": "05/12/2024",
+      "waktu": "11.25",
+      "lokasi": "-7.7929982, 110.3780799",
+      "latitude": -7.7929982,
+      "longitude": 110.3780799
     }
   ]
 }
